# pipewire-soundpad

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  README.ru.md  build.sh  build_all.sh  build_deb.sh  build_rpm.sh  pwsp.desktop  pwsp.flatpakrepo  pwsp.gpg  pwsp.spec  rust-pwsp.spec  summary  summary.idx  summary.idx.sig  summary.sig
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build-release.yml  (+10 more)
apt/: pubkey.gpg
assets/: pwsp-daemon.service  pwsp-gui.desktop
benches/: ui_benchmark.rs
build_scripts/: build.sh  build_all.sh  build_deb.sh  build_rpm.sh
locales/: app.toml
pwsp-cli/: Cargo.toml
pwsp-cli/src/: main.rs
pwsp-daemon/: Cargo.toml
pwsp-daemon/assets/: pwsp-daemon.service
pwsp-daemon/src/: main.rs
pwsp-gui/: Cargo.toml
pwsp-gui/assets/: pwsp-daemon.service
pwsp-gui/benches/: bench.rs
pwsp-gui/locales/: app.toml
pwsp-gui/maintainer-scripts/: postinst  postrm  prerm
pwsp-gui/src/: main.rs
pwsp-gui/src/gui/: input.rs  mod.rs  update.rs
pwsp-gui/src/gui/views/: body.rs  footer.rs  header.rs  hotkey_capture.rs  hotkeys.rs  mod.rs  settings.rs
pwsp-lib/: Cargo.toml
pwsp-lib/src/types/: audio_player.rs  commands.rs  config.rs  gui.rs  pipewire.rs  socket.rs
pwsp-lib/src/utils/: commands.rs  config.rs  daemon.rs  global_hotkeys.rs  gui.rs  pipewire.rs
scripts/: build.sh  build_all.sh  build_deb.sh  build_rpm.sh  generate-sources.sh  generate_rpm_spec.sh  update-versions.py
src/: app.rs  main.rs  pw.rs
summaries/: 00527580d17982100b44d2fe95452af00fdb376dae485c4e6eef94f04b29378e-c2acd38db743aa254b168711931339981b7c9e57284946672d41fcf566dbfc1f.delta  0081ea598666eaad814cb20223beea35f78fb44ef17e704cf2f77b7d86bf8f04-8235eb762406c66aa2751bf28bf09aa67801144194004a0477d2c57810465d20.delta  0081ea598666eaad814cb20223beea35f78fb44ef17e704cf2f77b7d86bf8f04-fde6a85e953879dd05274be00101d5ca6c9c19d35b98979b63476f24700381f7.delta  05baf51b75957248c4650c1da93161cb6f70a746dd96457e4fe2237fd49b0b9b-08b5634a902e866c74b050ee567b7b73ec17babf04d33ce8ab58738d43e9cbbd.delta  05baf51b75957248c4650c1da93161cb6f70a746dd96457e4fe2237fd49b0b9b-94ddfc58b6d62199f737a50d10a479bc90c841726e230641182a60d9baa07698.delta  05f815f23ceabd8b2ede96ad82c328086dcbe3f3f0a61f239f8c99a7a55e51bd-4a98ce3d91ad2b786479f8a23cfe075848af3a6644dfd6eda27890b97479da14.delta  08b5634a902e866c74b050ee567b7b73ec17babf04d33ce8ab58738d43e9cbbd-306bf7fac8bb49299c4b273d3db5c692d23ed508ce0c6fc1c03dbee6d8227bcb.delta  0b4f3dfee111e0c17b5ccaf94aa005e2a74b5ec195ccc7d818fe122077ab18c0-d829b0d590ec4b7507283caa3ec044bd2e606482e0c50ac4020209baf0d52f57.delta  106e726adbe539860e77d5ad7415c3eb8b5bec599746bb6911cb64c4d5078c75-05baf51b75957248c4650c1da93161cb6f70a746dd96457e4fe2237fd49b0b9b.delta  106e726adbe539860e77d5ad7415c3eb8b5bec599746bb6911cb64c4d5078c75-f6ac3f79a6b3b2e70105b5dc86e165da7cc2d899a0ab73fdfef28a61330cbabf.delta  127905c94f1acf0e158dd458a8e9fa2a8f3d79497d68ba34e227b305776e06d2-4a7bdb38f05f30b08ea92c016b9dba1c79e4f28e608136c1ab3c763e3a813b8c.delta  127905c94f1acf0e158dd458a8e9fa2a8f3d79497d68ba34e227b305776e06d2-4e99d504fd86325b17e4af206f15cca57f15de9ae499405872776e6540e47714.delta  127905c94f1acf0e158dd458a8e9fa2a8f3d79497d68ba34e227b305776e06d2-6ca4c787fe703c2191aaa8a84be9cb95baac8acb4050e47153c39cc92536e782.delta  127905c94f1acf0e158dd458a8e9fa2a8f3d79497d68ba34e227b305776e06d2-ca71be2fcda76d3be94e630e7087ce28e8f3e4a324b141682fdcc9401392c876.delta  127905c94f1acf0e158dd458a8e9fa2a8f3d79497d68ba34e227b305776e06d2-d88a6f588b785b5cc2d77b80a7b5a1196c09b3c12ce5254a7b38d9ba00cd9f03.delta  162c6567f0c3e92ccdb4379e478c9f1628954aec1a7fd02cb71db42bb09ef934-05baf51b75957248c4650c1da93161cb6f70a746dd96457e4fe2237fd49b0b9b.delta  162c6567f0c3e92ccdb4379e478c9f1628954aec1a7fd02cb71db42bb09ef934-106e726adbe539860e77d5ad7415c3eb8b5bec599746bb6911cb64c4d5078c75.delta  162c6567f0c3e92ccdb4379e478c9f1628954aec1a7fd02cb71db42bb09ef934-2972f0ad8399998c1ef03a76ee72a100d8c8905df29583a3e0bd2e6e781c6ad6.delta  162c6567f0c3e92ccdb4379e478c9f1628954aec1a7fd02cb71db42bb09ef934-74e1b45dd98543b8b57432a31b29ccbf4d4b8a3d7afe679f086a47a72ff8638c.delta  162c6567f0c3e92ccdb4379e478c9f1628954aec1a7fd02cb71db42bb09ef934-8235eb762406c66aa2751bf28bf09aa67801144194004a0477d2c57810465d20.delta  162c6567f0c3e92ccdb4379e478c9f1628954aec1a7fd02cb71db42bb09ef934-948004a3e1796f8b6b107458306002afa6d39a2b11a8edf80014c24d1ee46d18.delta  162c6567f0c3e92ccdb4379e478c9f1628954aec1a7fd02cb71db42bb09ef934-a038975387faa9432f01eb8e22975f8c867c9c477853682c0d043455ceb0cf89.delta  162c6567f0c3e92ccdb4379e478c9f1628954aec1a7fd02cb71db42bb09ef934-b24778e3374af3e52fa68b2c0fad1444a15a225247b499f40b3474eaba71df05.delta  162c6567f0c3e92ccdb4379e478c9f1628954aec1a7fd02cb71db42bb09ef934-d6b859f57b909d52639149374bc61fcda9320efdd8383032b17ab549d6d152ef.delta  162c6567f0c3e92ccdb4379e478c9f1628954aec1a7fd02cb71db42bb09ef934-dd1ff326ad41c94053ce83d85f45f3210acd4e9711a7eb44b606dfeac7c5f294.delta  162c6567f0c3e92ccdb4379e478c9f1628954aec1a7fd02cb71db42bb09ef934-f5e7523754dac887714000308418161c82f7a2811925c26e793d3b0d215bb20d.delta  162c6567f0c3e92ccdb4379e478c9f1628954aec1a7fd02cb71db42bb09ef934-fde6a85e953879dd05274be00101d5ca6c9c19d35b98979b63476f24700381f7.delta  1d39ae865efb1a734f6be560e48dd5f14757fdf07b5a7612a28894ce803837ae-00527580d17982100b44d2fe95452af00fdb376dae485c4e6eef94f04b29378e.delta  1d39ae865efb1a734f6be560e48dd5f14757fdf07b5a7612a28894ce803837ae-127905c94f1acf0e158dd458a8e9fa2a8f3d79497d68ba34e227b305776e06d2.delta  1d39ae865efb1a734f6be560e48dd5f14757fdf07b5a7612a28894ce803837ae-3a49e797ef38d6e3baf6e3cc97fc0c8cdf75b92e2acf3b6f6df18f3ea8e57da1.delta  1d39ae865efb1a734f6be560e48dd5f14757fdf07b5a7612a28894ce803837ae-490c73b89b3a3262c6050c4ba43b2c48d72e8a310568dc962d795b4fdd80eb9d.delta  1d39ae865efb1a734f6be560e48dd5f14757fdf07b5a7612a28894ce803837ae-4a5c370d33d37f6783a4bbe50708da47a5def54772cc0910dd600cba3c418717.delta  1d39ae865efb1a734f6be560e48dd5f14757fdf07b5a7612a28894ce803837ae-4c5061dd6731cd2b33fb1011ce06a098931cfb19203910263fd2a01128a9df89.delta  (+204 more)
tests/: perf_async_open.rs  perf_gui_config.rs  perf_play.rs
(+443 files in other folders)
