[package]
name = "pwsp"
version = "1.0.2"
edition = "2024"
authors = ["arabian"]
description = "PWSP lets you play audio files through your microphone. Has both CLI and GUI clients."
readme = "README.md"
homepage = "https://pwsp.arabianq.ru"
repository = "https://github.com/arabianq/pipewire-soundpad"
license = "MIT"
keywords = ["soundpad", "pipewire", "linux", "cli", "gui"]


[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
futures = { version = "0.3.31", features = ["thread-pool"] }
async-trait = "0.1.89"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

clap = { version = "4.5.48", default-features = false, features = ["std", "suggestions", "help", "usage", "error-context", "derive"] }
dirs = "6.0.0"

rodio = { version = "0.21.1", default-features = false, features = ["symphonia-all", "playback"] }
pipewire = "0.9.2"
rfd = "0.15.4"

egui = { version = "0.33.0", default-features = false, features = ["default_fonts", "rayon"] }
eframe = { version = "0.33.0", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
egui_material_icons = "0.5.0"

[[bin]]
name = "pwsp-daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "pwsp-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "pwsp-gui"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[package.metadata.deb]
assets = [
    ["target/release/pwsp-daemon", "usr/bin/", "755"],
    ["target/release/pwsp-cli", "usr/bin/", "755"],
    ["target/release/pwsp-gui", "usr/bin/", "755"],
    ["assets/pwsp-gui.desktop", "usr/share/applications/pwsp.desktop", "644"],
    ["assets/icon.png", "usr/share/icons/hicolor/256x256/apps/pwsp.png", "644"],
    ["assets/pwsp-daemon.service", "usr/lib/systemd/user/pwsp-daemon.service", "644"],
]