[workspace]
members = [
    "pwsp-lib",
    "pwsp-daemon",
    "pwsp-cli",
    "pwsp-gui"
]
resolver = "2"

[workspace.package]
version = "1.10.0"
edition = "2024"
authors = ["arabian"]
homepage = "https://pwsp.arabianq.ru"
repository = "https://github.com/arabianq/pipewire-soundpad"
license = "MIT"
keywords = ["soundpad", "pipewire", "linux", "cli", "gui"]

[workspace.dependencies]
pwsp-lib = { path = "pwsp-lib" }
pwsp-daemon = { path = "pwsp-daemon" }
pwsp-cli = { path = "pwsp-cli" }
pwsp-gui = { path = "pwsp-gui" }

tokio = { version = "1.52.3", features = ["full"] }
async-trait = "0.1.89"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

clap = { version = "4.6.1", default-features = false, features = [
    "std",
    "suggestions",
    "help",
    "usage",
    "error-context",
    "derive",
] }

dirs = "6.0.0"
itertools = "0.14.0"
evdev = { version = "0.13.2", features = ["tokio"] }
rfd = { version = "0.17.2", default-features = false, features = [
    "xdg-portal",
] }
opener = { version = "0.8.4", features = ["reveal"] }
system-fonts = "0.1.1"
anyhow = "1.0.102"
rustix = { version = "1.1.4", features = ["process"] }

rust-i18n = "4.0.0"
sys-locale = "0.3.2"

rodio = { git = "https://github.com/arabianq/rodio.git", rev = "a634dd471e9d59196e19bf01323fb45f2f899821", default-features = false, features = [
    "symphonia-all",
    "symphonia-libopus",
    "playback",
] }
pipewire = "0.10.0"

egui = { version = "0.34.2", default-features = false, features = [
    "default_fonts",
    "rayon",
] }
eframe = { version = "0.34.2", default-features = false, features = [
    "default_fonts",
    "glow",
    "x11",
    "wayland",
] }
egui_extras = "0.34.1"
egui_material_icons = "0.6.0"
egui_dnd = "0.15.0"

reqwest = "0.13.4"
percent-encoding = "2.3.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

