[package]
name = "pwsp-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
pwsp-lib.workspace = true

tokio.workspace = true

serde_json.workspace = true

clap.workspace = true
anyhow.workspace = true

pipewire.workspace = true
