[package]
name = "pwsp-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
pwsp-lib.workspace = true

tokio.workspace = true

opener.workspace = true
rfd.workspace = true
itertools.workspace = true
anyhow.workspace = true

serde.workspace = true
serde_json.workspace = true

egui.workspace = true
eframe.workspace = true
egui_extras.workspace = true
egui_material_icons.workspace = true
egui_dnd.workspace = true

system-fonts.workspace = true
rust-i18n.workspace = true
sys-locale.workspace = true

reqwest.workspace = true
percent-encoding.workspace = true
url = "2.5.8"

[package.metadata.deb]
name = "pwsp"
section = "sound"
priority = "optional"
assets = [
    [
        "target/release/pwsp-daemon",
        "usr/bin/",
        "755",
    ],
    [
        "target/release/pwsp-cli",
        "usr/bin/",
        "755",
    ],
    [
        "target/release/pwsp-gui",
        "usr/bin/",
        "755",
    ],
    [
        "assets/pwsp-gui.desktop",
        "usr/share/applications/pwsp.desktop",
        "644",
    ],
    [
        "assets/icon.png",
        "usr/share/icons/hicolor/256x256/apps/pwsp.png",
        "644",
    ],
    [
        "assets/pwsp-daemon.service",
        "usr/lib/systemd/user/pwsp-daemon.service",
        "644",
    ],
]
